python-xrandr (0.1.1) gutsy; urgency=low

  * Fix a crash if the -dev packages are not installed. Thanks Alberto for
    reporting

 -- Sebastian Heinlein <glatzor@ubuntu.com>  Tue, 27 Nov 2007 16:24:17 +0100

python-xrandr (0.1) gutsy; urgency=low

  * Initial Release.

 -- Sebastian Heinlein <glatzor@ubuntu.com>  Tue, 27 Nov 2007 09:39:08 +0100